Fix mvn java version problem